--- a/src/main/resources/templates/ikh/seller/item/searchdetail.html
+++ b/src/main/resources/templates/ikh/seller/item/searchdetail.html
@@ -191,8 +191,19 @@
     <!--ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ-->
     <!-- 전체지역에 대한 바차트 스크립트  -->
     <script th:inline="javascript" type="text/javascript">       
-        var arrays = "[[${array}]]";
+       var rays = "[[${array}]]";
         var max = "[[${max}]]";
+        
+        var arrays = rays.split(",");   
+        for(var i = 0 ; i < arrays.length; i++){
+            console.log(arrays[i]+ " " + i + "번");
+        }
+        var first = arrays[0];
+        var last = arrays[14];
+        var firstn = first.match(/\d+/)[0];
+        var lastn = last.match(/\d+/)[0];
+        arrays[0] = firstn;
+        arrays[14] = lastn;  
         
         var ctx = document.getElementById("myBarChart2");
         var myLineChart = new Chart(ctx, {
@@ -203,8 +214,8 @@
             label: "Headcount",
             backgroundColor: "rgba(2,117,216,0.5)",
             borderColor: "rgba(2,117,216,1)",
-            data: [arrays[1], arrays[3], arrays[5], arrays[7], arrays[9], arrays[11], arrays[13], arrays[15], arrays[17]
-                    , arrays[19], arrays[21], arrays[23], arrays[25], arrays[27], arrays[29]],
+            data: [arrays[0], arrays[1], arrays[2], arrays[3], arrays[4], arrays[5], arrays[6], arrays[7], arrays[8]
+                    , arrays[9], arrays[10], arrays[11], arrays[12], arrays[13], arrays[14]],
             }],
         },
         options: {
@@ -253,13 +264,6 @@
                 });
             }
         });
-        $(document).ready(function () {
-            new simpleDatatables.DataTable("#datatablesSimple", {
-                searchable: true,
-                fixedHeight: true,
-            })
-        });
-
     </script>
 </body>
 
