0604 09:39 화면 디자인 수정, 페이지네이션 버튼 디자인 수정

--- a/src/main/resources/static/css/mj/seller.css
+++ b/src/main/resources/static/css/mj/seller.css
@@ -353,8 +353,9 @@ ul {
 
 .datatable-pagination li:last-child,
 .datatable-pagination li:last-child a {
-    border-top-right-radius: 0.5;
-    border-bottom-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
+    
 }
 
 /* 에러페이지 */
