--- a/src/main/resources/templates/mj/seller/management.html
+++ b/src/main/resources/templates/mj/seller/management.html
@@ -41,8 +41,7 @@
             <main>
                 <div class="container-fluid px-4" > <!-- 옆쪽에 딱 붙음. -->
 
-
-                    <h3>물품관리</h3>
+                    <h3 style="margin-top: 30px;">물품관리</h3>
                     <div>
 
                         <form th:action="@{/seller/item/management.do}" method="get" th:object="${cate}" style="float: left;">
